se agregan resultados performance

--- a/CatBoost/CatBoost.ipynb
+++ b/CatBoost/CatBoost.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,12 +160,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f'{path}Opt_Model_2/BestModel_CAT_all_features.pickle', 'wb') as file:\n",
-    "    pickle.dump(best_model, file)\n",
-    "with open(f'{path}/Opt_Model_2/results_CAT_model_all_features.pickle', 'wb') as file:\n",
-    "    pickle.dump(results, file)\n",
-    "with open(f'{path}/Opt_Model_2/residual_model_CAT_model_all_features.pickle', 'wb') as file:\n",
-    "    pickle.dump(residual_model, file)"
+    "#with open(f'{path}Opt_Model_2/BestModel_CAT_all_features.pickle', 'wb') as file:\n",
+    "#    pickle.dump(best_model, file)\n",
+    "#with open(f'{path}/Opt_Model_2/results_CAT_model_all_features.pickle', 'wb') as file:\n",
+    "#    pickle.dump(results, file)\n",
+    "#with open(f'{path}/Opt_Model_2/residual_model_CAT_model_all_features.pickle', 'wb') as file:\n",
+    "#    pickle.dump(residual_model, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f'{path}Opt_Model_2/BestModel_CAT_all_features.pickle', 'rb') as file:\n",
+    "    model =  pickle.load(file)\n",
+    "    \n",
+    "with open(f'{path}Opt_Model_2/results_CAT_model_all_features.pickle', 'rb') as file:\n",
+    "    results =  pickle.load(file)\n",
+    "\n",
+    "with open(f'{path}Opt_Model_2/residual_model_CAT_model_all_features.pickle', 'rb') as file:\n",
+    "    residual_model =  pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_model.model=model\n",
+    "cat_model.residual_model = residual_model"
    ]
   },
   {
