--- a/KNN/KNN.ipynb
+++ b/KNN/KNN.ipynb
@@ -151,12 +151,177 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f'{path}Opt_Model_2/BestModel_KNN_all_features.pickle', 'wb') as file:\n",
-    "    pickle.dump(knn_model.model, file)\n",
-    "with open(f'{path}Opt_Model_2/results_KNN_model_all_features.pickle', 'wb') as file:\n",
-    "    pickle.dump(results, file)\n",
-    "with open(f'{path}/Opt_Model_2/residual_model_KNN_model_all_features.pickle', 'wb') as file:\n",
-    "    pickle.dump(residual_model, file)"
+    "#with open(f'{path}Opt_Model_2/BestModel_KNN_all_features.pickle', 'wb') as file:\n",
+    "#    pickle.dump(knn_model.model, file)\n",
+    "#with open(f'{path}Opt_Model_2/results_KNN_model_all_features.pickle', 'wb') as file:\n",
+    "#    pickle.dump(results, file)\n",
+    "#with open(f'{path}/Opt_Model_2/residual_model_KNN_model_all_features.pickle', 'wb') as file:\n",
+    "#    pickle.dump(residual_model, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f'{path}Opt_Model_2/BestModel_KNN_all_features.pickle', 'rb') as file:\n",
+    "    model =  pickle.load(file)\n",
+    "    \n",
+    "with open(f'{path}Opt_Model_2/results_KNN_model_all_features.pickle', 'rb') as file:\n",
+    "    results =  pickle.load(file)\n",
+    "\n",
+    "with open(f'{path}Opt_Model_2/residual_model_KNN_model_all_features.pickle', 'rb') as file:\n",
+    "    residual_model =  pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train': {'mae': [0.391029341029341,\n",
+       "   0.3880159531017251,\n",
+       "   0.47888136081879773,\n",
+       "   0.4870837537840565,\n",
+       "   0.4303930176785878,\n",
+       "   0.385765395048947,\n",
+       "   0.4663049698367559,\n",
+       "   0.4575464898371054,\n",
+       "   0.46319254240545865,\n",
+       "   0.4611935995387055],\n",
+       "  'mse': [3.394118051260908,\n",
+       "   3.3271015099615364,\n",
+       "   4.634032826046665,\n",
+       "   4.646518668012109,\n",
+       "   4.184431216757871,\n",
+       "   3.176584716998441,\n",
+       "   4.5573939418901235,\n",
+       "   4.441666838279207,\n",
+       "   4.538424047722017,\n",
+       "   4.455045923515723],\n",
+       "  'rmse': [1.8423132337528567,\n",
+       "   1.8240344048184882,\n",
+       "   2.152680381767499,\n",
+       "   2.1555784996172394,\n",
+       "   2.045588232454878,\n",
+       "   1.7822975949595066,\n",
+       "   2.1348053639360485,\n",
+       "   2.1075262366763567,\n",
+       "   2.1303577276415377,\n",
+       "   2.110697970699674],\n",
+       "  'r2': [0.9916231191174317,\n",
+       "   0.9916247077226594,\n",
+       "   0.9883779837220542,\n",
+       "   0.9884386293870776,\n",
+       "   0.9895791418662839,\n",
+       "   0.9919769236741723,\n",
+       "   0.9885309939371173,\n",
+       "   0.9888694588977823,\n",
+       "   0.9887923331611874,\n",
+       "   0.9889162788073002]},\n",
+       " 'val': {'mae': [13.004764809398276,\n",
+       "   14.803788784883533,\n",
+       "   14.492468657109951,\n",
+       "   13.62438613610707,\n",
+       "   12.979511830673092,\n",
+       "   13.516277371005101,\n",
+       "   14.792288944075068,\n",
+       "   13.741163392088838,\n",
+       "   13.716622670438822,\n",
+       "   15.055264654263206],\n",
+       "  'mse': [256.7334962904239,\n",
+       "   333.36909345277496,\n",
+       "   306.7228123284647,\n",
+       "   277.8031760674076,\n",
+       "   253.52751983440768,\n",
+       "   275.38278945013303,\n",
+       "   324.19772166326595,\n",
+       "   278.5879170327132,\n",
+       "   285.8638263647456,\n",
+       "   328.5623009482477],\n",
+       "  'rmse': [16.022905363585714,\n",
+       "   18.258397888445057,\n",
+       "   17.513503713662345,\n",
+       "   16.667428597939384,\n",
+       "   15.922547529663953,\n",
+       "   16.59466147440595,\n",
+       "   18.005491430762614,\n",
+       "   16.690953149317544,\n",
+       "   16.907507988013656,\n",
+       "   18.12628756663227],\n",
+       "  'r2': [0.27430318304809886,\n",
+       "   0.22055095976052808,\n",
+       "   0.25268025788394677,\n",
+       "   0.28112975175555377,\n",
+       "   0.34953667492353024,\n",
+       "   0.3740161728091347,\n",
+       "   0.23908663124606977,\n",
+       "   0.31481784414390457,\n",
+       "   0.17943910060158985,\n",
+       "   0.1502418302517956]},\n",
+       " 'test': {'mae': [13.686609359486626,\n",
+       "   13.703510703121458,\n",
+       "   13.922642758482027,\n",
+       "   13.50093332359388,\n",
+       "   13.610083228193552,\n",
+       "   13.748437023967146,\n",
+       "   13.859416011807328,\n",
+       "   13.873185161511161,\n",
+       "   13.662957116827204,\n",
+       "   13.737786330689117],\n",
+       "  'mse': [280.5987387636069,\n",
+       "   287.1647876229813,\n",
+       "   291.39396337513085,\n",
+       "   276.42138913347543,\n",
+       "   278.0287210040623,\n",
+       "   286.03697190623745,\n",
+       "   289.9224153425744,\n",
+       "   287.20711103870553,\n",
+       "   282.63944828067133,\n",
+       "   288.07765340496934],\n",
+       "  'rmse': [16.75108171920867,\n",
+       "   16.94593720108101,\n",
+       "   17.07026547465302,\n",
+       "   16.62592521135216,\n",
+       "   16.674193263965194,\n",
+       "   16.912627587286295,\n",
+       "   17.02710824956999,\n",
+       "   16.947185932735426,\n",
+       "   16.811884138331173,\n",
+       "   16.9728504796622],\n",
+       "  'r2': [0.30666251483819973,\n",
+       "   0.2904383228704537,\n",
+       "   0.27998836114495584,\n",
+       "   0.3169844182792445,\n",
+       "   0.3130128272383027,\n",
+       "   0.2932250670882597,\n",
+       "   0.28362444096727835,\n",
+       "   0.2903337450282616,\n",
+       "   0.3016200816086647,\n",
+       "   0.28818270308982785]},\n",
+       " 'model': [KNeighborsRegressor(n_neighbors=14, p=1, weights='distance'),\n",
+       "  KNeighborsRegressor(n_neighbors=14, p=1, weights='distance'),\n",
+       "  KNeighborsRegressor(n_neighbors=14, p=1, weights='distance'),\n",
+       "  KNeighborsRegressor(n_neighbors=14, p=1, weights='distance'),\n",
+       "  KNeighborsRegressor(n_neighbors=14, p=1, weights='distance'),\n",
+       "  KNeighborsRegressor(n_neighbors=14, p=1, weights='distance'),\n",
+       "  KNeighborsRegressor(n_neighbors=14, p=1, weights='distance'),\n",
+       "  KNeighborsRegressor(n_neighbors=14, p=1, weights='distance'),\n",
+       "  KNeighborsRegressor(n_neighbors=14, p=1, weights='distance'),\n",
+       "  KNeighborsRegressor(n_neighbors=14, p=1, weights='distance')]}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
    ]
   },
   {
