--- a/SVR/SVR.ipynb
+++ b/SVR/SVR.ipynb
@@ -26,7 +26,16 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from svr_regressor import SVRRegressor\n",
     "from Plotter import Plotter\n"
@@ -153,12 +162,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f'{path}Opt_Model_2/BestModel_SVR_all_features.pickle', 'wb') as file:\n",
-    "    pickle.dump(svr_model.model, file)\n",
-    "with open(f'{path}Opt_Model_2/results_SVR_model_all_features.pickle', 'wb') as file:\n",
-    "    pickle.dump(results, file)\n",
-    "with open(f'{path}Opt_Model_2/residual_model_SVR_model_all_features.pickle', 'wb') as file:\n",
-    "    pickle.dump(residual_model, file)"
+    "#with open(f'{path}Opt_Model_2/BestModel_SVR_all_features.pickle', 'wb') as file:\n",
+    "#    pickle.dump(svr_model.model, file)\n",
+    "#with open(f'{path}Opt_Model_2/results_SVR_model_all_features.pickle', 'wb') as file:\n",
+    "#    pickle.dump(results, file)\n",
+    "#with open(f'{path}Opt_Model_2/residual_model_SVR_model_all_features.pickle', 'wb') as file:\n",
+    "#    pickle.dump(residual_model, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f'{path}Opt_Model_2/BestModel_SVR_all_features.pickle', 'rb') as file:\n",
+    "    model =  pickle.load(file)\n",
+    "    \n",
+    "with open(f'{path}Opt_Model_2/results_SVR_model_all_features.pickle', 'rb') as file:\n",
+    "    results =  pickle.load(file)\n",
+    "\n",
+    "with open(f'{path}Opt_Model_2/residual_model_SVR_model_all_features.pickle', 'rb') as file:\n",
+    "    residual_model =  pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results"
    ]
   },
   {
