--- a/MLP/MLP.ipynb
+++ b/MLP/MLP.ipynb
@@ -24,9 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from mlp_regressor import MLPRegressorCustom\n",
     "from mlp_regressor import MLPWrapper\n",
@@ -131,36 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\felipe\\Documents\\Brain\\brain_age_env\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results, best_model_results , best_model, residual_model= mlp_model.trainer_2(params_=best_params_mlp[0])"
    ]
@@ -171,12 +153,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f'{path}Opt_Model_2/BestModel_MLP_all_features.pickle', 'wb') as file:\n",
-    "    pickle.dump(best_model, file)\n",
-    "with open(f'{path}/Opt_Model_2/results_MLP_all_features.pickle', 'wb') as file:\n",
-    "    pickle.dump(results, file)\n",
-    "with open(f'{path}/Opt_Model_2/residual_model_MLP_model_all_features.pickle', 'wb') as file:\n",
-    "    pickle.dump(residual_model, file)"
+    "#with open(f'{path}Opt_Model_2/BestModel_MLP_all_features.pickle', 'wb') as file:\n",
+    "#    pickle.dump(best_model, file)\n",
+    "#with open(f'{path}/Opt_Model_2/results_MLP_all_features.pickle', 'wb') as file:\n",
+    "#    pickle.dump(results, file)\n",
+    "#with open(f'{path}/Opt_Model_2/residual_model_MLP_model_all_features.pickle', 'wb') as file:\n",
+    "#    pickle.dump(residual_model, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f'{path}Opt_Model_2/BestModel_MLP_all_features.pickle', 'rb') as file:\n",
+    "    model =  pickle.load(file)\n",
+    "    \n",
+    "with open(f'{path}Opt_Model_2/results_MLP_all_features.pickle', 'rb') as file:\n",
+    "    results =  pickle.load(file)\n",
+    "\n",
+    "with open(f'{path}Opt_Model_2/residual_model_MLP_model_all_features.pickle', 'rb') as file:\n",
+    "    residual_model =  pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results"
    ]
   },
   {
