--- a/Random_Forest/Random_Forest.ipynb
+++ b/Random_Forest/Random_Forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,12 +151,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f'{path}Opt_Model_2/BestModel_RF_all_features.pickle', 'wb') as file:\n",
-    "    pickle.dump(rf_model.model, file)\n",
-    "with open(f'{path}Opt_Model_2/results_RF_model_all_features.pickle', 'wb') as file:\n",
-    "    pickle.dump(results, file)\n",
-    "with open(f'{path}Opt_Model_2/residual_model_RF_model_all_features.pickle', 'wb') as file:\n",
-    "    pickle.dump(residual_model, file)"
+    "#with open(f'{path}Opt_Model_2/BestModel_RF_all_features.pickle', 'wb') as file:\n",
+    "#    pickle.dump(rf_model.model, file)\n",
+    "#with open(f'{path}Opt_Model_2/results_RF_model_all_features.pickle', 'wb') as file:\n",
+    "#    pickle.dump(results, file)\n",
+    "#with open(f'{path}Opt_Model_2/residual_model_RF_model_all_features.pickle', 'wb') as file:\n",
+    "#    pickle.dump(residual_model, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f'{path}Opt_Model_2/BestModel_RF_all_features.pickle', 'rb') as file:\n",
+    "    model =  pickle.load(file)\n",
+    "    \n",
+    "with open(f'{path}Opt_Model_2/results_RF_model_all_features.pickle', 'rb') as file:\n",
+    "    results =  pickle.load(file)\n",
+    "\n",
+    "with open(f'{path}Opt_Model_2/residual_model_RF_model_all_features.pickle', 'rb') as file:\n",
+    "    residual_model =  pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results"
    ]
   },
   {
