--- a/Lasso/Lasso.ipynb
+++ b/Lasso/Lasso.ipynb
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,17 +757,17 @@
     "results_training = [results_labels_df_CN_train, results_labels_df_CN_test, results_labels_list, \n",
     "           results_model, results_per_fold_CN_train, results_per_fold_CN_test, results_per_fold_pat]\n",
     "\n",
-    "with open('resultados_modelo.pkl', 'wb') as f:\n",
+    "with open('results_model/resultados_modelo.pkl', 'wb') as f:\n",
     "    pickle.dump(results_training, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('resultados_modelo.pkl', 'rb') as f:\n",
+    "with open('results_model/resultados_modelo.pkl', 'rb') as f:\n",
     "    loaded_results = pickle.load(f)\n",
     "\n",
     "# Acceder a los objetos\n",
@@ -801,16 +801,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_CN_combined.to_excel('df_CN_combined.xlsx', index=False)"
+    "df_CN_combined.to_excel('results/df_CN_combined.xlsx', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_avg_list[0].to_excel('results_avg_list.xlsx', index=False)\n"
+    "results_avg_list[0].to_excel('results/results_avg_list.xlsx', index=False)\n"
    ]
   },
   {
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1084,14 +1084,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('shap_summary_sorted.pkl', 'wb') as f:\n",
+    "with open('results_model/shap_summary_sorted.pkl', 'wb') as f:\n",
     "    pickle.dump(shap_summary_sorted, f)\n",
     "\n",
-    "with open('shap_values_avg_array.pkl', 'wb') as f:\n",
+    "with open('results_model/shap_values_avg_array.pkl', 'wb') as f:\n",
     "    pickle.dump(shap_values_avg_array, f)"
    ]
   },
@@ -1101,10 +1101,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('shap_summary_sorted.pkl', 'rb') as f:\n",
+    "with open('results_model/shap_summary_sorted.pkl', 'rb') as f:\n",
     "    shap_summary_sorted = pickle.load(f)\n",
     "\n",
-    "with open('shap_values_avg_array.pkl', 'rb') as f:\n",
+    "with open('results_model/shap_values_avg_array.pkl', 'rb') as f:\n",
     "    shap_values_avg_array = pickle.load(f)\n"
    ]
   },
@@ -1239,7 +1239,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df_CN_combined = pd.read_excel('df_CN_combined.xlsx')\n"
+    "df_CN_combined = pd.read_excel('results/df_CN_combined.xlsx')\n"
    ]
   },
   {
