--- a/Random_Forest/RandomForest.ipynb
+++ b/Random_Forest/RandomForest.ipynb
@@ -841,9 +841,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'results_labels_df_CN_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mresults_labels_df_CN_train\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'results_labels_df_CN_train' is not defined"
+     ]
+    }
+   ],
    "source": [
     "results_labels_df_CN_train"
    ]
