--- a/KernelRidge/KernelRidge.ipynb
+++ b/KernelRidge/KernelRidge.ipynb
@@ -978,6 +978,145 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shap\n",
+    "import numpy as np\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "shap_values_dict = {id_unique: [] for id_unique in df_concatenado_CN['ID-unique'].unique()}\n",
+    "\n",
+    "for i in range(20):\n",
+    "    for j in range(10):\n",
+    "\n",
+    "        ID_train_fold = results_per_fold_CN_train[i][j]['ID-unique']\n",
+    "        df_train_fold = df_concatenado_CN[df_concatenado_CN['ID-unique'].isin(ID_train_fold)]\n",
+    "        X_train_kf_CN = df_train_fold.iloc[:, :-2]  # Features\n",
+    "        y_train_kf_CN = df_train_fold.iloc[:, -2]   # Labels (Age)\n",
+    "        id_train_kf_CN = df_train_fold.iloc[:, -1]\n",
+    "\n",
+    "        ID_test_fold = results_per_fold_CN_test[i][j]['ID-unique']\n",
+    "        df_test_fold = df_concatenado_CN[df_concatenado_CN['ID-unique'].isin(ID_test_fold)]\n",
+    "        X_test_kf_CN = df_test_fold.iloc[:, :-2]  # Features\n",
+    "        y_test_kf_CN = df_test_fold.iloc[:, -2]   # Labels (Age)\n",
+    "        id_test_kf_CN = df_test_fold.iloc[:, -1]\n",
+    "\n",
+    "        mean_X_train_kf = results_model['mean_X_train_kf'][j + 10 * i]\n",
+    "        std_X_train_kf = results_model['std_X_train_kf'][j + 10 * i]\n",
+    "\n",
+    "        X_train_kf_CN_scaled = (X_train_kf_CN - mean_X_train_kf) / std_X_train_kf\n",
+    "        X_test_kf_CN_scaled = (X_test_kf_CN - mean_X_train_kf) / std_X_train_kf\n",
+    "\n",
+    "        model_ = results_model['model'][j + 10 * i]\n",
+    "\n",
+    "        # Calcular los valores SHAP\n",
+    "        explainer = shap.Explainer(model_, X_train_kf_CN_scaled)\n",
+    "        shap_values = explainer.shap_values(X_test_kf_CN_scaled)\n",
+    "\n",
+    "        # Almacenar los valores SHAP en el diccionario\n",
+    "        for idx, id_unique in enumerate(df_test_fold['ID-unique']):\n",
+    "            shap_values_dict[id_unique].append(shap_values[idx])\n",
+    "\n",
+    "# Promediar los valores SHAP para cada ID-unique\n",
+    "shap_values_avg_dict = {id_unique: np.mean(values, axis=0) for id_unique, values in shap_values_dict.items()}\n",
+    "\n",
+    "shap_values_avg_matrix = []\n",
+    "\n",
+    "feature_names = X_test_kf_CN_scaled.columns.tolist()\n",
+    "\n",
+    "for id_unique in df_concatenado_CN['ID-unique'].unique():\n",
+    "    if id_unique in shap_values_avg_dict:\n",
+    "        shap_values_avg_matrix.append(shap_values_avg_dict[id_unique])\n",
+    "\n",
+    "shap_values_avg_array = np.array(shap_values_avg_matrix)\n",
+    "\n",
+    "shap_values_df = pd.DataFrame(shap_values_avg_array, columns=feature_names)\n",
+    "shap_values_df['ID-unique'] = df_concatenado_CN['ID-unique'].unique()\n",
+    "\n",
+    "shap_values_df.set_index('ID-unique', inplace=True)\n",
+    "\n",
+    "shap_sum = np.abs(shap_values_avg_array).sum(axis=0)\n",
+    "# Crear un diccionario para almacenar la suma de SHAP por característica\n",
+    "shap_summary = {feature: shap_sum[i] for i, feature in enumerate(X_CN.columns)}\n",
+    "\n",
+    "# Ordenar las características por su suma de SHAP\n",
+    "shap_summary_sorted = sorted(shap_summary.items(), key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "# Imprimir el listado de importancia de características\n",
+    "print(\"Importancia de características basada en suma de valores SHAP:\")\n",
+    "for feature, shap_sum in shap_summary_sorted:\n",
+    "    print(f\"{feature}: {shap_sum}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('results_model/shap_summary_sorted.pkl', 'wb') as f:\n",
+    "    pickle.dump(shap_summary_sorted, f)\n",
+    "\n",
+    "with open('results_model/shap_values_avg_array.pkl', 'wb') as f:\n",
+    "    pickle.dump(shap_values_avg_array, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('results_model/shap_summary_sorted.pkl', 'rb') as f:\n",
+    "    shap_summary_sorted = pickle.load(f)\n",
+    "\n",
+    "with open('results_model/shap_values_avg_array.pkl', 'rb') as f:\n",
+    "    shap_values_avg_array = pickle.load(f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Plotters.plot_feature_importance(shap_values=shap_values_avg_array,X_test=X_CN_scaled,y_test=y_CN, font= \"Times New Roman\", fontsize=24, xlabel1='Shap Values', xlabel2='Sum of SHAP Values',ylabel='Features', ylabel1='Features Values', ylabel2='Age Correlation')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shap_por_region_sorted, resultado_normalizado_sorted=model.shap_region(shap_summary_sorted=shap_summary_sorted, num_max=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Plotters.plot_normalized_values(resultado_normalizado_sorted, color='darkorange', name_set='KernelRidge',x_size=3,y_size=3,font='Times New Roman', fontsize=12, xlabel='Values', ylabel='Regions')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_path = f'{path}cerebritos/'\n",
+    "\n",
+    "Plotters.plot_brain_regions(resultado_normalizado_sorted, base_path, color='darkorange')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
