--- a/Lasso/Lasso.ipynb
+++ b/Lasso/Lasso.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,12 +1039,368 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>y_labels</th>\n",
+       "      <th>y_pred</th>\n",
+       "      <th>y_pred_corrected</th>\n",
+       "      <th>GAP</th>\n",
+       "      <th>GAP_corrected</th>\n",
+       "      <th>ID-unique</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>57.0</td>\n",
+       "      <td>34.875326</td>\n",
+       "      <td>41.043774</td>\n",
+       "      <td>-22.124674</td>\n",
+       "      <td>-15.956226</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>35.377818</td>\n",
+       "      <td>26.768634</td>\n",
+       "      <td>0.377818</td>\n",
+       "      <td>-8.231366</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>45.436753</td>\n",
+       "      <td>30.110462</td>\n",
+       "      <td>20.436753</td>\n",
+       "      <td>5.110462</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>37.0</td>\n",
+       "      <td>34.030556</td>\n",
+       "      <td>26.764792</td>\n",
+       "      <td>-2.969444</td>\n",
+       "      <td>-10.235208</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>32.412641</td>\n",
+       "      <td>13.727797</td>\n",
+       "      <td>12.412641</td>\n",
+       "      <td>-6.272203</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26455</th>\n",
+       "      <td>69.0</td>\n",
+       "      <td>41.705312</td>\n",
+       "      <td>56.475866</td>\n",
+       "      <td>-27.294688</td>\n",
+       "      <td>-12.524134</td>\n",
+       "      <td>1294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26456</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>42.291757</td>\n",
+       "      <td>23.807410</td>\n",
+       "      <td>22.291757</td>\n",
+       "      <td>3.807410</td>\n",
+       "      <td>1325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26457</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>26.436062</td>\n",
+       "      <td>10.666400</td>\n",
+       "      <td>2.436062</td>\n",
+       "      <td>-13.333600</td>\n",
+       "      <td>1333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26458</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>35.387612</td>\n",
+       "      <td>22.332636</td>\n",
+       "      <td>7.387612</td>\n",
+       "      <td>-5.667364</td>\n",
+       "      <td>1345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26459</th>\n",
+       "      <td>59.0</td>\n",
+       "      <td>44.049511</td>\n",
+       "      <td>52.033350</td>\n",
+       "      <td>-14.950489</td>\n",
+       "      <td>-6.966650</td>\n",
+       "      <td>1364</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>26460 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       y_labels     y_pred  y_pred_corrected        GAP  GAP_corrected  \\\n",
+       "0          57.0  34.875326         41.043774 -22.124674     -15.956226   \n",
+       "1          35.0  35.377818         26.768634   0.377818      -8.231366   \n",
+       "2          25.0  45.436753         30.110462  20.436753       5.110462   \n",
+       "3          37.0  34.030556         26.764792  -2.969444     -10.235208   \n",
+       "4          20.0  32.412641         13.727797  12.412641      -6.272203   \n",
+       "...         ...        ...               ...        ...            ...   \n",
+       "26455      69.0  41.705312         56.475866 -27.294688     -12.524134   \n",
+       "26456      20.0  42.291757         23.807410  22.291757       3.807410   \n",
+       "26457      24.0  26.436062         10.666400   2.436062     -13.333600   \n",
+       "26458      28.0  35.387612         22.332636   7.387612      -5.667364   \n",
+       "26459      59.0  44.049511         52.033350 -14.950489      -6.966650   \n",
+       "\n",
+       "      ID-unique  \n",
+       "0             1  \n",
+       "1             6  \n",
+       "2            20  \n",
+       "3            33  \n",
+       "4            42  \n",
+       "...         ...  \n",
+       "26455      1294  \n",
+       "26456      1325  \n",
+       "26457      1333  \n",
+       "26458      1345  \n",
+       "26459      1364  \n",
+       "\n",
+       "[26460 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_labels_df_CN_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "results_labels_df_total = [results_labels_df_CN_test]\n",
     "results_avg_list = model.avg_list(results_labels_df_total)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID-unique</th>\n",
+       "      <th>y_labels</th>\n",
+       "      <th>y_pred</th>\n",
+       "      <th>y_pred_corrected</th>\n",
+       "      <th>GAP</th>\n",
+       "      <th>GAP_corrected</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>34.942691</td>\n",
+       "      <td>25.089313</td>\n",
+       "      <td>1.942691</td>\n",
+       "      <td>-7.910687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>35.890313</td>\n",
+       "      <td>42.206639</td>\n",
+       "      <td>-21.109687</td>\n",
+       "      <td>-14.793361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>43.794459</td>\n",
+       "      <td>33.269340</td>\n",
+       "      <td>11.794459</td>\n",
+       "      <td>1.269340</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>24.766380</td>\n",
+       "      <td>6.776773</td>\n",
+       "      <td>3.766380</td>\n",
+       "      <td>-14.223227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>17.785710</td>\n",
+       "      <td>9.944582</td>\n",
+       "      <td>-18.214290</td>\n",
+       "      <td>-26.055418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1318</th>\n",
+       "      <td>1379</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>65.857471</td>\n",
+       "      <td>72.109594</td>\n",
+       "      <td>8.857471</td>\n",
+       "      <td>15.109594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1319</th>\n",
+       "      <td>1380</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>52.626511</td>\n",
+       "      <td>52.871694</td>\n",
+       "      <td>4.626511</td>\n",
+       "      <td>4.871694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1320</th>\n",
+       "      <td>1381</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>61.552807</td>\n",
+       "      <td>67.821492</td>\n",
+       "      <td>4.552807</td>\n",
+       "      <td>10.821492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1321</th>\n",
+       "      <td>1382</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>50.110492</td>\n",
+       "      <td>64.483754</td>\n",
+       "      <td>-18.889508</td>\n",
+       "      <td>-4.516246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1322</th>\n",
+       "      <td>1383</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>50.642541</td>\n",
+       "      <td>61.664342</td>\n",
+       "      <td>-13.357459</td>\n",
+       "      <td>-2.335658</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1323 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ID-unique  y_labels     y_pred  y_pred_corrected        GAP  \\\n",
+       "0             0      33.0  34.942691         25.089313   1.942691   \n",
+       "1             1      57.0  35.890313         42.206639 -21.109687   \n",
+       "2             2      32.0  43.794459         33.269340  11.794459   \n",
+       "3             3      21.0  24.766380          6.776773   3.766380   \n",
+       "4             5      36.0  17.785710          9.944582 -18.214290   \n",
+       "...         ...       ...        ...               ...        ...   \n",
+       "1318       1379      57.0  65.857471         72.109594   8.857471   \n",
+       "1319       1380      48.0  52.626511         52.871694   4.626511   \n",
+       "1320       1381      57.0  61.552807         67.821492   4.552807   \n",
+       "1321       1382      69.0  50.110492         64.483754 -18.889508   \n",
+       "1322       1383      64.0  50.642541         61.664342 -13.357459   \n",
+       "\n",
+       "      GAP_corrected  \n",
+       "0         -7.910687  \n",
+       "1        -14.793361  \n",
+       "2          1.269340  \n",
+       "3        -14.223227  \n",
+       "4        -26.055418  \n",
+       "...             ...  \n",
+       "1318      15.109594  \n",
+       "1319       4.871694  \n",
+       "1320      10.821492  \n",
+       "1321      -4.516246  \n",
+       "1322      -2.335658  \n",
+       "\n",
+       "[1323 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_avg_list[0]"
    ]
   },
   {
